--- a/scss/cards/_layout.scss
+++ b/scss/cards/_layout.scss
@@ -26,14 +26,13 @@
         }
     }
     .card-container {
-        @include sizing($padding: 0 15px 50px 15px);
+        @include sizing($padding: 50px 15px);
         .card-inner {
             position: relative;
             height: 100%;
         }
         .card {
             position: relative;
-            @include sizing($margin: 30px 0 0 0);
         }
         .card-top {
             height: 100%;
