--- a/scss/navigation/_layout.scss
+++ b/scss/navigation/_layout.scss
@@ -47,7 +47,7 @@
         display: flex;
         list-style-type: none;
         padding: 0 15px;
-        line-height: 3;
+        line-height: 3.5;
         font-size: $xxxs-font;
         li:nth-child(n+2):before {
             content: "-";
